--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,3 +32,18 @@ address{
 .navbar-dark{
     background-color: rgb(44, 8, 92);
 }
+
+.carousel{
+    background: #512DA8;
+}
+
+.carousel-item{
+    height: 250px;
+}
+
+.carousel-item img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    min-height: 250px;
+}
